[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]
